--- a/src/front-page.css
+++ b/src/front-page.css
@@ -4,10 +4,10 @@ html {
 }
 
 body {
-  background: linear-gradient(rgba(150, 234, 255, 0.6), rgba(150, 234, 255, 0.6)), url("../images/intro.jpg");
+  background: linear-gradient(45deg,rgba(132, 204, 235, 0.454), rgba(136, 179, 189, 0.6)), url("../images/intro.jpg");
   background-repeat: no-repeat;
   background-size: 200vh;
-  height: 100vh;
+  height: 98vh;
   position: relative;
 }
 
@@ -19,6 +19,7 @@ body {
 h1 {
   font-size: 6.5em;
   margin: 0px;
+  
 }
 
 #front-page-form {
@@ -33,10 +34,10 @@ h1 {
 
 #front-page-name {
   height: 50px;
-  border-radius: 5px;
+  border-radius: 20px;
   border: none;
-  padding: 10px;
-  font-size: 2em;  
+  padding: 20px;
+  font-size: 2.3em;  
   font-family: 'Fugaz One', curisve;
 }
 
@@ -45,10 +46,10 @@ h1 {
 }
 
 #front-page-btn {
-  height: 70px;
-  border-radius: 5px;
-  border: none;
-  background: linear-gradient(rgb(1, 115, 143), rgba(150, 234, 255, 1));
+  height: 85px;
+  border-radius: 20px;
+  border: 2.5px solid white;
+  background:rgba(145, 232, 233, 0.673);
   font-size: 3.5em;
   cursor: pointer;
   font-family: 'Fugaz One', curisve;
