--- a/src/front-page.css
+++ b/src/front-page.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  background: linear-gradient(45deg,rgba(132, 204, 235, 0.454), rgba(136, 179, 189, 0.6)), url("../images/intro.jpg");
+  background: linear-gradient(to bottom right,rgba(3, 90, 238, 0.454), rgba(136, 179, 189, 0.6)), url("../images/intro.jpg");
   background-repeat: no-repeat;
   background-size: 200vh;
   height: 98vh;
@@ -49,7 +49,7 @@ h1 {
   height: 85px;
   border-radius: 20px;
   border: 2.5px solid white;
-  background:rgba(145, 232, 233, 0.673);
+  background:rgba(90, 191, 245, 0.673);
   font-size: 3.5em;
   cursor: pointer;
   font-family: 'Fugaz One', curisve;
