--- a/src/dashboard-styles.css
+++ b/src/dashboard-styles.css
@@ -1,6 +1,7 @@
 * {
   margin: 0px;
   padding: 0px;
+
 }
 
 h1 {
@@ -29,6 +30,10 @@ header {
   transition: .5s;
   width: 120px;
   border: none;
+}
+
+#menu-btn:focus {
+  outline: none;
 }
 
 .menu-div1 {
@@ -77,7 +82,7 @@ nav {
   padding: 20px;
   transition: .5s;
   left: 0;
-  /* visibility: hidden; */
+  z-index: 1000;
 }
 
 .hidden {
@@ -109,8 +114,10 @@ body {
 }
 
 .dashboard-photo {
+  background-color: rgb(218, 226, 230);
   height: 45vh;
   width: 100%;
+  border-radius: 20px;
 }
 
 main {
@@ -131,11 +138,44 @@ main {
 
 .info-card {
   cursor: pointer;
-  /* border: 3px solid white; */
   border-radius: 20px;
-  box-shadow: 15px 18px 10px 5px black;
   margin: auto;
   margin-top: 65px;
-  background: rgb(218, 226, 230);
+  background-color: rgb(218, 226, 230);
   width: 400px; 
+  
+}
+
+.info-card-inner {
+  box-shadow: 15px 15px 20px -5px black;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform .8s;
+  transform-style: preserve-3d;
+}
+
+.info-card:active .info-card-inner {
+  transform: rotateY(180deg);
+}
+
+.info-card-front, .info-card-back {
+  background-color: rgb(218, 226, 230);
+  background: rgb(218, 226, 230);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.info-card-front {
+  background-color: black;
+}
+
+.info-card-back {
+  height: 100%;
+  width: 400px;
+  background: red;
+  transform: rotateY(180deg);
 }
