--- a/src/dashboard-styles.css
+++ b/src/dashboard-styles.css
@@ -115,10 +115,12 @@ body {
 
 .dashboard-photo {
   background-color: rgb(218, 226, 230);
-  height: 45vh;
+  height: 100%;
   width: 100%;
   border-radius: 20px;
+  box-shadow: 4px 5px 10px 0px;
 }
+
 
 main {
   display: flex;
@@ -132,48 +134,72 @@ main {
 }
 
 .main-dashboard {
+  width: 100%;
+  height: 100vh;
+  margin: auto;
   display: flex;
-  flex-flow: wrap;
-}
-
-input {
-  display: none;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  perspective: 1000px;
+  margin-top: 65px;
 }
 
 .info-card {
-  cursor: pointer;
+  width: 400px;
+  height: 45vh;
+  margin: 25px;
+  position: relative;
+  transform: scale(1);
+  transform-style: preserve-3d;
+  transition: transform .5s;
+  width: 400px;
+  margin-top: 50px;
+   
+
+  /* cursor: pointer;
   border-radius: 20px;
   margin: auto;
   margin-top: 65px;
   background-color: rgb(218, 226, 230);
   width: 400px;
-
+  position: relative; */
 }
 
-.info-card-inner {
-  box-shadow: 15px 15px 20px -5px black;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  text-align: center;
-  transition: transform .8s;
-  transform-style: preserve-3d;
-}
 
-.info-card:active .info-card-inner {
-  transform: rotateY(180deg);
-}
 
-.info-card-front, .info-card-back {
+.info-card-front, 
+.info-card-back {
+  /* padding: 20px; */
   background-color: rgb(218, 226, 230);
   background: rgb(218, 226, 230);
-  /* position: absolute; */
+  position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  border-radius: 20px;
+  box-shadow: 10px 10px 20px 0px;
+}
+
+.info-card:hover {
+  transform: rotateY(20deg);
+}
+
+.info-card:active {
+  transform: scale(.97);
+  transition: transform .2s;
+}
+
+
+
+.info-card.flip {
+  transform: rotateY(180deg);
 }
 
 .info-card-front {
+  transform: rotateY(180deg);
+}
+
+/* .info-card-front {
   background-color: black;
 }
 
@@ -183,4 +209,4 @@ input {
   background: red;
   transform: rotateY(180deg);
   border-radius: 20px;
-}
+} */
