--- a/src/dashboard-styles.css
+++ b/src/dashboard-styles.css
@@ -8,6 +8,8 @@ h1 {
   font-size: 4.5em;
   margin-top: 10px;
   font-family: 'Roboto Condensed', sans-serif;
+  color: white;
+  text-shadow: .5px .5px black;
 }
 
 h2 {
@@ -30,6 +32,11 @@ header {
   transition: .5s;
   width: 120px;
   border: none;
+}
+
+#menu-btn:active {
+  transform: scale(.95);
+  transition: transform .2s;
 }
 
 #menu-btn:focus {
@@ -75,10 +82,10 @@ nav {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 1.3em;
   position: absolute;
-  background: rgba(232, 232, 232);
+  background: linear-gradient(rgba(255, 255, 0), rgb(255, 255, 255));
   color: rgb(3, 90, 238);
   border-radius: 20px;
-  border: 2px solid black;
+  border: 2px solid rgba(24, 173, 237);
   padding: 20px;
   transition: .5s;
   left: 0;
@@ -106,21 +113,38 @@ li {
 }
 
 body {
-  background: linear-gradient(rgba(3, 90, 238, 0.7), rgba(136, 179, 189, 0.9));
+  background: linear-gradient(to bottom left, rgba(24, 173, 237, 0.9), rgba(124, 174, 205, 0.3));
   background-repeat: no-repeat;
   background-size: 200vh;
   background-attachment: fixed;
   height: 150vh;
+  
+}
+
+.header-line1 {
+  width: 97%;
+  height: 3px;
+  background: white;
+  margin: auto;
+  margin-bottom: 20px;
+  border-radius: 10px;
+}
+
+.header-line2 {
+  width: 88%;
+  height: 3px;
+  background: white;
+  margin: auto;
+  border-radius: 10px;
 }
 
 .dashboard-photo {
-  background-color: rgb(218, 226, 230);
+    background: rgb(218, 226, 230);
   height: 100%;
   width: 100%;
   border-radius: 20px;
   box-shadow: 4px 5px 10px 0px;
 }
-
 
 main {
   display: flex;
@@ -141,7 +165,9 @@ main {
   justify-content: space-around;
   flex-wrap: wrap;
   perspective: 1000px;
-  margin-top: 65px;
+  margin-top: 5px;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 1.5em;
 }
 
 .info-card {
@@ -154,34 +180,24 @@ main {
   transition: transform .5s;
   width: 400px;
   margin-top: 50px;
-   
-
-  /* cursor: pointer;
-  border-radius: 20px;
-  margin: auto;
-  margin-top: 65px;
-  background-color: rgb(218, 226, 230);
-  width: 400px;
-  position: relative; */
+  cursor: pointer;
 }
-
-
 
 .info-card-front, 
 .info-card-back {
-  /* padding: 20px; */
-  background-color: rgb(218, 226, 230);
-  background: rgb(218, 226, 230);
+  background: linear-gradient(rgba(255, 255, 0, 0.99), rgba(255, 255, 255, 0.9));
   position: absolute;
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
   border-radius: 20px;
   box-shadow: 10px 10px 20px 0px;
+  text-align: center;
+  border: 1px solid white;
 }
 
 .info-card:hover {
-  transform: rotateY(20deg);
+  transform: rotateY(5deg);
 }
 
 .info-card:active {
@@ -189,24 +205,13 @@ main {
   transition: transform .2s;
 }
 
-
-
 .info-card.flip {
   transform: rotateY(180deg);
+  transition: transform 1s;
 }
 
 .info-card-front {
   transform: rotateY(180deg);
+  transition: transform 1s;
+  overflow: auto;
 }
-
-/* .info-card-front {
-  background-color: black;
-}
-
-.info-card-back {
-  height: 45vh;
-  width: 400px;
-  background: red;
-  transform: rotateY(180deg);
-  border-radius: 20px;
-} */
