Fix classes for styling

--- a/src/front-page.css
+++ b/src/front-page.css
@@ -1,14 +1,14 @@
-html {
-  margin: 0;
-  font-family: 'Fugaz One', curisve;
-}
-
 body {
-  background: linear-gradient(to bottom right,rgba(3, 90, 238, 0.454), rgba(136, 179, 189, 0.6)), url("../images/intro.jpg");
+  height: 100vh;
+}
+#front-page {
+  background: linear-gradient(to bottom right,rgba(24, 173, 237, 0.9), rgba(207, 219, 227, 0.3)), url("../images/intro.jpg");
   background-repeat: no-repeat;
   background-size: 200vh;
   height: 98vh;
   position: relative;
+  margin: 0;
+  
 }
 
 #front-page-header {
@@ -16,10 +16,11 @@ body {
   padding-left: 15px;
 }
 
-h1 {
+#front-logo {
   font-size: 6.5em;
   margin: 0px;
-  
+  font-family: 'Fugaz One', cursive;
+  color: black;
 }
 
 #front-page-form {
@@ -55,8 +56,17 @@ h1 {
   font-family: 'Fugaz One', curisve;
 }
 
+#front-page-btn:hover {
+  background:rgba(66, 127, 160, 0.673);
+}
+
 #front-page-btn:focus {
   outline: none;
+}
+
+#front-page-btn:active {
+  transform: scale(.99);
+  transition: transform .2s;
 }
 
 #front-page-footer {
@@ -65,8 +75,12 @@ h1 {
   right: 5px;
 }
 
-h2 {
+#front-slogan {
   font-size: 2em;
   margin: 0;
   margin-bottom: -10px;
+}
+
+.hidden {
+  display: none;
 }
